--- a/manifest.json
+++ b/manifest.json
@@ -30,7 +30,8 @@
   },
 
   "options_ui": {
-    "page": "options/options.html"
+    "page": "options/options.html",
+    "browser_style": false
   },
 
   "browser_specific_settings": {
