--- a/manifest.json
+++ b/manifest.json
@@ -12,12 +12,13 @@
   "content_scripts": [
     {
       "matches": ["*://*/*"],
-      "js": ["spassmodus.js"]
+      "js": ["lib/jquery.min.js", "spassmodus.js"],
+      "run_at": "document_idle"
     }
   ],
 
   "background": {
-    "scripts": ["background.js"],
+    "scripts": ["background.js", "lib/jquery.min.js"],
     "type": "module"
   },
 
